--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<section class="event-item" id="title">
 			<div class="grid grid--no-gutter">
 				<div class="grid__col grid__col--6-of-6 grid__col--centered">
-					<h1 class="title text-center"><a href="/">MintFest 2015</a></h1>
+					<h1 class="title text-center"><a href="">MintFest 2015</a></h1>
 					<h2 class="subtitle text-center">Want To Win Some Real Skins?</h2>
 				</div>
 				<div class="grid__col grid__col--6-of-6 grid__col--centered" align="center">
@@ -40,7 +40,7 @@
 					<div class="grid__col grid__col--3-of-5 grid__col--centered">
 						<div class="text-center">
 							<h2 class="subtitle text-center">Event Overview</h2>	
-							<h3 class="text text-center">Please see <a href="/overview">Event Overview</a> for more details.</h3>
+							<h3 class="text text-center">Please see <a href="overview">Event Overview</a> for more details.</h3>
 						</div>
 					</div>
 				</div>
@@ -158,7 +158,7 @@
 				<div class="grid__col grid__col--3-of-5 grid__col--centered">
 					<div class="text-center">
 						<h2 class="subtitle text-center">Rules &amp; Regulations</h2>	
-						<h3 class="text text-center">Please note the following <a href="/rules">Rules and Regulations</a></h3>
+						<h3 class="text text-center">Please note the following <a href="rules">Rules and Regulations</a></h3>
 					</div>
 				</div>
 			</div>
@@ -168,7 +168,7 @@
 				<div class="grid__col grid__col--3-of-5 grid__col--centered">
 					<div class="text-center">
 						<h2 class="subtitle text-center">Event Overview</h2>	
-						<h3 class="text text-center">Please see <a href="/overview">Event Overview</a> for more details.</h3>
+						<h3 class="text text-center">Please see <a href="overview">Event Overview</a> for more details.</h3>
 					</div>
 				</div>
 			</div>
