--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<section class="event-item" id="title">
 			<div class="grid grid--no-gutter">
 				<div class="grid__col grid__col--6-of-6 grid__col--centered">
-					<h1 class="title text-center"><a href="">MintFest 2015</a></h1>
+					<h1 class="title text-center"><a href="/mintling">MintFest 2015</a></h1>
 					<h2 class="subtitle text-center">Want To Win Some Real Skins?</h2>
 				</div>
 				<div class="grid__col grid__col--6-of-6 grid__col--centered" align="center">
