--- a/rules/index.html
+++ b/rules/index.html
@@ -7,11 +7,11 @@
   
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
-  <script type="text/javascript" src="scripts/jquery.countdown.min.js"></script>
+  <script type="text/javascript" src="../scripts/jquery.countdown.min.js"></script>
 
-  <link rel="stylesheet" media="screen" type="text/css" href="/css/index.css"/>
+  <link rel="stylesheet" media="screen" type="text/css" href="../css/index.css"/>
 
-  <link rel="shortcut icon" href="/favicon.ico" />
+  <link rel="shortcut icon" href="../favicon.ico" />
 
 </head>
 <body>
@@ -19,7 +19,7 @@
 		<section class="event-item" id="title titleRules">
 			<div class="grid grid--no-gutter">
 				<div class="grid__col grid__col--6-of-6 grid__col--centered">
-					<h1 class="title text-center"><a href="/">MintFest 2015</a></h1>
+					<h1 class="title text-center"><a href="/mintling">MintFest 2015</a></h1>
 				</div>
 			</div>
 		</section>
